# context-builder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/context_builder/: __init__.py  __main__.py  app.py  cli.py  utils.py
